k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: default
spec:
  selector:
    app: fastapi
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
